--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -47,10 +47,13 @@
 		        {% endif %}
 	        </ul>
 	        <div class="comment-form-container well-small well clearfix hide">
-	            <img class="pull-left" src="{{ user.email|gravatar:'30' }}" alt="user's gravatar" width="" />
+				<div class='avatar-container pull-left'>
+					<img class="avatar pull-left" src="{{ user.email|gravatar:'65' }}" alt="user's gravatar" width="" />
+				</div>
+				<strong class="pull-left name">{{ user.first_name }} {{ user.last_name }}</strong><br/>
 		        <form method="post" class="clearfix comment-form">
 				    {% csrf_token %}
-				    <input type="text" placeholder="Comment on this post" id="id_message" name="comment" class="pull-left spacing-right" autocomplete="off" />
+				    <input type="text" placeholder="Comment on this post" id="id_message" name="comment" class="pull-left comment-box" autocomplete="off" />
                     <input type="hidden" name="id_post" value="{{ post.pk }}" />
 				    <input type="submit" value="Comment" class="btn pull-left" />
 				</form>
