Creating group while looking at Inbox now functions correctly; Refactored some of the group-specific document.ready to a separate file

--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -112,5 +112,7 @@
 {% endblock body %}
 
 {% block extrajs %}
+<script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/group.js"></script>
 <script src="{{ STATIC_URL }}js/create-group.js"></script>
 {% endblock extrajs %}
