--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -16,6 +16,7 @@
           <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
+            <li><a href="#change-password" data-toggle="modal">Change Password</a>
         	<li><a href="/logout">Logout</a>
         </ul>
       </li>
@@ -27,84 +28,81 @@
 {% block content %}
 <div id="top" class="row-fluid">
 	<div class="container-narrow">
-	<div class="span3">
-		<div id='left-column' class="well">
-			{% block nav %}
-			<ul id="team-nav" class="nav nav-list">
-			    <li {% if not grpid %} class="active" {% endif %} ><a href="/">Inbox</a></li>
-			    <li class="nav-header">Groups</li>
-			    {% for member in user.membership_set.all %}
-			    <li {% ifequal grpid member.group.id %} class="active" {% endifequal %}>
-			        <a href="/group/{{ member.group.id }}/">
-			            {{ member.group.name }}
-			        </a>
-			    </li>
-			    {% endfor %}
-			    <li class="divider"></li>
-			</ul>
-		    <a class="btn btn-block" href="#create-group" data-toggle="modal"><i class="icon-plus"></i> New Group</a>
-			
-			{% endblock nav %}
-		</div>
-	</div>
-	<div id="content-container" class="span9">
-		<div class="hero-unit">
-			<div id="content">
-				{% block maincontent %}
-				<p>No Content</p>
-				{% endblock maincontent %}
+		<div class="span3">
+			<div id='left-column' class="well">
+				{% block nav %}
+				<ul id="team-nav" class="nav nav-list">
+				    <li {% if not grpid %} class="active" {% endif %} ><a href="/">Inbox</a></li>
+				    <li class="nav-header">Groups</li>
+				    {% for member in user.membership_set.all %}
+				    <li {% ifequal grpid member.group.id %} class="active" {% endifequal %}>
+				        <a href="/group/{{ member.group.id }}/">
+				            {{ member.group.name }}
+				        </a>
+				    </li>
+				    {% endfor %}
+				    <li class="divider"></li>
+				</ul>
+			    <a class="btn btn-block" href="#create-group" data-toggle="modal"><i class="icon-plus"></i> New Group</a>
+				
+				{% endblock nav %}
 			</div>
 		</div>
-		<div id="footer">This is a footer</div>
+		<div id="content-container" class="span9">
+			<div class="hero-unit">
+				<div id="content">
+					{% block maincontent %}
+					<p>No Content</p>
+					{% endblock maincontent %}
+				</div>
+			</div>
+			<div id="footer">This is a footer</div>
+		</div>
 	</div>
-	</div>
-	<div class="span2">
+	<!--<div class="span2">
 		<div class="well">
 			{% block agenda %}
-			<!--<ul id='agenda' class="nav nav-list">
+			<ul id='agenda' class="nav nav-list">
 			    <li class="nav-header">Agenda</li>
 			    <li class='divider'></li>
-			</ul>-->
-			<!-- TODO get rid of this garbage -->
-			<form id="change-password">{% csrf_token %}
+			</ul>
+			<!-- TODO get rid of this garbage
+			<form action="/change_password/" id="change-password">{% csrf_token %}
 				<p><input type="password" name="cur_password" placeholder="Current Password" /></p>
 				<p><input type="password" name="new_password1" placeholder="New Password" /></p>
 				<p><input type="password" name="new_password2" placeholder="Retype New Password" /></p>
 				<p><input type="submit" value="Change Password" /></p>
 			</form>
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 			<script>
 			$(document).ready(function() {
-				$("#change-password").submit(function(event) {
+				$('#change-password').submit(function(event) {
 					event.preventDefault();
 
 					var form = $(this);
-					var url = '/change_password/';
-					var cur_password = form.find('input[name="cur_password"]').val();
-					var new_password1 = form.find('input[name="new_password1"]').val();
-					var new_password2 = form.find('input[name="new_password2"]').val();
-					var csrf = form.find('input[name="csrfmiddlewaretoken"]').val();
+					var url = "/change_password/";
 
-					form.find('input[type="password"]').val("");
-
-					$.post(url, {cur_password: cur_password, new_password1: new_password1, new_password2: new_password2, csrfmiddlewaretoken: csrf},
+					$.post(
+						url,
+						form.serialize(),
 						function(data) {
+							form.find('input[type="password"]').val("");
 							if (!data.success) {
 								alert(data.error);
 							} else {
-								alert("Success!");
+								alert("Password changed");
 							}
-						}, 'json');
+						}, "json");
 				});
 			});
 			</script>
-			<!-- end TOOD -->
+			<!-- end TODO
 			{% endblock agenda %}
 		</div>
-	</div>
+	</div> -->
 </div>
 
 {% include "group_create_modal.html" with csrf_token=csrf_token only %}
+{% include "password_change_modal.html" %}
 
 <div id="jump-top" class="hide well"><i class="icon-arrow-up"></i></div>
 {% endblock content %}
@@ -115,4 +113,5 @@
 <script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/group.js"></script>
 <script src="{{ STATIC_URL }}js/create-group.js"></script>
+<script src="{{ STATIC_URL }}js/change-password.js"></script>
 {% endblock extrajs %}
