Password reset with AJAX

--- a/templates/about.html
+++ b/templates/about.html
@@ -68,6 +68,6 @@
 		</div>
 	</div>
 	
-	<a href=".." class="back-btn btn btn-large pull-right">Back</a>
+	<a href="/" class="back-btn btn btn-large pull-right">Back</a>
 </div>
 {% endblock formtype %}
