--- a/templates/email_sent.html
+++ b/templates/email_sent.html
@@ -6,5 +6,5 @@
     {% else %}
         This page has expired
     {% endif %}
-    <a href=".." class="btn back-btn btn-large">Back</a>
+    <a href="/" class="btn back-btn btn-large">Back</a>
 {% endblock formtype %}
