--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -5,15 +5,18 @@
     <h2>Password successfully changed</h2>
     <p>Please check your email for a temporary password.</p>
     <p>Use it to sign in and then change your password.</p>
-    <a href="/" class="btn btn-large pull-left">Back to sign in</a>
-{% elif password_not_found %}
-    <h2>We have no record of that email address</h2>
+    <a href="/" class="back-btn btn btn-large pull-right">Back</a>
 {% else %}
-    <form class="clearfix" method="post">
+    <form id="reset-password-form" class="clearfix" method="post">
         {% csrf_token %}
         <h2>Please enter your email address </h2>
         <input id="id_email" type="text" name="email" maxlength="40" class="input-block-level" placeholder="Email address">
-        <input class="submit-btn btn btn-large btn-primary pull-left" type="submit" value="Reset" />
+        <input id="reset-password-btn" class="submit-btn btn btn-large btn-primary pull-left" type="submit" value="Reset Password" />
+        <a href="/" class="back-btn btn btn-large pull-right">Back</a>
     </form>
 {% endif %}
 {% endblock formtype %}
+
+{% block extrajs %}
+<script src="{{ STATIC_URL }}js/reset-password.js"></script>
+{% endblock extrajs %}
