--- a/templates/starter_base.html
+++ b/templates/starter_base.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 <div class="container">
-	<div class="span8 offset2">
+	<div class="span8 offset1">
 		<div class="hero-unit clearfix">
 			<h1>Bulletin</h1>
 			<hr />
-			<h3>{{ state }}</h3>
+			<h4>{{ state|safe }}</h4>
 			<div id="content-container">
 				{% block formtype %}
 				<!-- login or register form-->
