Inviting people directly from create_group_modal

--- a/templates/group_create_modal.html
+++ b/templates/group_create_modal.html
@@ -13,9 +13,19 @@
 	        <input type="text" name="name" id="id_name" placeholder="Group Name" />
 		    {% endif %}
 		    
+		    <div class="invitation">
+		        <h4 class="people-list-header hide">People to be invited:</h4>
+		        <div class="people-list">
+		        </div>
+		        <a class="btn btn-block add-invitee-btn" href="javascript:void(0)"><i class="icon-plus"></i> Add a new person to the group</a>
+		    </div>
+		    
+		    <script type="text/javascript">
+		    
+		    </script>
 		</div>
 		<div class="modal-footer">
-			<a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</a>
+			<a href="#" class="btn dismiss" data-dismiss="modal" aria-hidden="true">Cancel</a>
 			<input type="submit" id="create-group-btn" class="btn btn-primary" value="Create" />
 		</div>
 	</form>
