Changed how images in memory are handled when resizing avatars.

--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -48,7 +48,7 @@
 	        </ul>
 	        <div class="comment-form-container well-small well clearfix hide">
 				<div class='avatar-container pull-left'>
-					<img class="avatar pull-left" src="{{ user.email|gravatar:'65' }}" alt="user's gravatar" width="" />
+					<img class="avatar pull-left" src="{{ user.email|gravatar:'65' }}" alt="user's gravatar" />
 				</div>
 				<strong class="pull-left name">{{ user.first_name }} {{ user.last_name }}</strong><br/>
 		        <form method="post" class="clearfix comment-form">
