--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -75,6 +75,7 @@ abbr.timeago {
     background: rgba(255,255,255,0.5) url('/static/images/ajax-loader.gif') no-repeat center center;
     height: 100%;
     width: 100%;
+    position: absolute;
     top: 0;
 }
 
