--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -72,7 +72,7 @@ abbr.timeago {
 }
 
 .loading-spinner {
-    background: rgba(255,255,255,0.5) url('/static/images/ajax-loader.gif') no-repeat center center;
+    background: rgba(255,255,255,0.5) url('/images/ajax-loader.gif') no-repeat center center;
     height: 100%;
     width: 100%;
     position: absolute;
