--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         
         <!-- Custom CSS -->
         <link href="{{ STATIC_URL }}css/site.css" rel="stylesheet">
-		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet">
         {% block head %}
         {% endblock head %}
