fixed container layout

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -180,9 +180,12 @@ textarea {
 .container-narrow {
     margin: 0 auto;
     max-width: 940px;
-    overflow: hidden;
 }
 
 .modal form {
 	margin: 0;
+}
+
+#front-main {
+    max-width
 }
