--- a/templates/starter_base.html
+++ b/templates/starter_base.html
@@ -5,17 +5,15 @@
 {% endblock head %}
 
 {% block body %}
-<div class="container">
-	<div class="span8 offset2">
-		<div class="hero-unit clearfix">
-			<h1>Bulletin</h1>
-			<hr />
-			<h3>{{ state }}</h3>
-			<div id="content-container">
-				{% block formtype %}
-				<!-- login or register form-->
-				{% endblock formtype %}
-			</div>
+<div class="container-narrow">
+	<div class="hero-unit clearfix">
+		<h1>Bulletin</h1>
+		<hr />
+		<h3>{{ state }}</h3>
+		<div id="content-container">
+			{% block formtype %}
+			<!-- login or register form-->
+			{% endblock formtype %}
 		</div>
 	</div>
 </div>
