--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -226,6 +226,7 @@ textarea {
             box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
     font-size: 14px;
 	background-color: rgba(255,255,255,0.5);
+	padding-top: 15px;
 }
 
 ul.errorlist {
