--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -3,7 +3,7 @@
 body {
 	padding-top: 40px;
     background-color: #f5f5f5;
-    background-image: url("/images/whitey.png");
+    background-image: url("/static/images/bedge_grunge.png");
 }
 
 .placeholder {
@@ -53,8 +53,9 @@ abbr.timeago {
 #left-column {
 	-moz-border-radius-bottomright: 0;
     -webkit-border-bottom-right-radius: 0;
-	border-right-width: 0px;
+	border-right: 1px solid #ddd;
 	border-top-width: 0px;
+    background-color: rgba(255,255,255,0.6);
 }
 
 .comment-form-container {
@@ -223,7 +224,7 @@ textarea {
        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
             box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
     font-size: 14px;
-	background-color: rgba(255,255,255,0.5);
+	background-color: rgba(255,255,255,0.6);
 }
 
 ul.errorlist {
