--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -3,7 +3,7 @@
 body {
 	padding-top: 40px;
     background-color: #f5f5f5;
-    background-image: url("/static/images/bedge_grunge.png");
+    background-image: url("/images/bedge_grunge.png");
 }
 
 .placeholder {
