Added non-working paragraph filtering.

--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -115,6 +115,7 @@
 <script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/group.js"></script>
 <script src="{{ STATIC_URL }}js/create-group.js"></script>
+<script src="{{ STATIC_URL }}js/paragraph-filter.js"></script>
 <script src="{{ STATIC_URL }}js/change-password.js"></script>
 {% if is_admin %}<script src="{{ STATIC_URL }}js/group-invite.js"></script>{% endif %}
 {% endblock extrajs %}
