fixed up the about page, made images statically hosted

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,19 +4,19 @@
 <div class="clearfix">
 	<h2 class="form-signin-heading">What is Bulletin?</h2>
 	<p>Bulletin is a collaboration tool for small, private groups. It enables anyone to quickly set up a space for private status updates and comments, which only the group members have access to, allowing quick and easy communication. As it grows, Bulletin will have more functionality to help groups get work done, like project agendas and task lists.</p>
-	
+
 	<hr />
 	<h2>Our team</h2>
 	<div class="row-fluid">
 		<div class="span3">
-		     <img src="https://dl.dropbox.com/u/949104/finn.jpg" alt="Caylan">
+		     <img src="{{ STATIC_URL }}images/caylan.jpeg" alt="Caylan">
 		</div>
 		<div class="span3">
 		  <h4> Caylan Lee </h4>
 		  <p><em> Team Lead </em></p>
 		</div>
 		<div class="span3">
-		     <img src="https://dl.dropbox.com/s/wfz2t7fw985qr38/ppc.jpg" alt="Yoong">
+		     <img src="{{ STATIC_URL }}images/yoong.jpeg" alt="Yoong">
 		</div>
 		<div class="span3">
 		  <h4> Yoong Kim </h4>
@@ -26,14 +26,14 @@
 	<br />
 	<div class="row-fluid">
 		<div class="span3">
-		     <img src="https://dl.dropbox.com/s/l7la7zckw3x6y5q/155297_1733996668219_785330_n.jpg" alt="Ivan">
+		     <img src="{{ STATIC_URL }}images/ivan.jpeg" alt="Ivan">
 		</div>
 		<div class="span3">
 		  <h4> Ivan Darmansyah </h4>
 		  <p><em> Front End </em></p>
 		</div>
 		<div class="span3">
-		     <img src="https://dl.dropbox.com/s/86r8mbtpjryecom/me_tie.jpg" alt="Andrew">
+		     <img src="{{ STATIC_URL }}images/andrew.jpeg" alt="Andrew">
 		</div>
 		<div class="span3">
 		  <h4> Andrew Davies </h4>
@@ -43,14 +43,14 @@
 	<br />
 	<div class="row-fluid">
 		<div class="span3">
-		     <img src="http://photos-2.dropbox.com/t/0/AACUoXAe36AnJ4vxNGReGwO9vARKiUYuvsrQlQUzMyqR2w/10/1588283/jpeg/200x200/1/_/0/4/profile.jpg/n0xwr6nyeb13odr/1FvHVY2nCZ/profile.jpg" alt="Peter">
+		     <img src="{{ STATIC_URL }}images/peter.jpg" alt="Peter">
 		</div>
 		<div class="span3">
 		  <h4> Peter Weisbeck </h4>
 		  <p><em> Front End </em></p>
 		</div>
 		<div class="span3">
-		     <img src="https://gravatar.com/avatar/e6973ed7e8ab0eb6ad316477177cf04f?s=300&d=mm" alt="Kyle">
+		     <img src="{{ STATIC_URL }}images/kyle.jpeg" alt="Kyle">
 		</div>
 		<div class="span3">
 		  <h4> Kyle Boone </h4>
@@ -60,14 +60,14 @@
 	<br />
 	<div class="row-fluid">
 		<div class="span3">
-		     <img src="https://dl.dropbox.com/s/9if59cc6lg2fe73/1352152367380.jpg" alt="Brian">
+		     <img src="{{ STATIC_URL }}images/brian.jpg" alt="Brian">
 		</div>
 		<div class="span3">
 		  <h4> Brian Oliphant </h4>
 		  <p><em> Back End </em></p>
 		</div>
 	</div>
-	
+
 	<a href="/" class="back-btn btn btn-large pull-right">Back</a>
 </div>
 {% endblock formtype %}
