--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -3,7 +3,7 @@
 body {
 	padding-top: 40px;
     background-color: #f5f5f5;
-    background-image: url("/images/bedge_grunge.png");
+    background-image: url("/static/images/bedge_grunge.png");
 }
 
 .placeholder {
@@ -56,7 +56,6 @@ abbr {
 #left-column {
 	-moz-border-radius-bottomright: 0;
     -webkit-border-bottom-right-radius: 0;
-	border-right: 1px solid #ddd;
 	border-top-width: 0px;
     background-color: rgba(255,255,255,0.6);
 }
@@ -234,6 +233,10 @@ textarea {
 	padding-top: 15px;
 }
 
+.container-frontpage .hero-unit {
+    padding: 30px 40px 30px;
+}
+
 ul.errorlist {
 	margin: 0;
 	padding: 0 0 0 15px;
@@ -269,3 +272,9 @@ ul.errorlist {
 .people-list .person-email {
 	margin-bottom: 10px;
 }
+
+.container-frontpage {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
