--- a/templates/starter_base.html
+++ b/templates/starter_base.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<div class="container-narrow">
+<div class="container-frontpage">
 	<div class="hero-unit clearfix">
 		<h1>Bulletin</h1>
 		<hr />
