Added error handling to password changing.

--- a/templates/password_change_modal.html
+++ b/templates/password_change_modal.html
@@ -7,9 +7,14 @@
         </div>
         <div class="modal-body">
             {% csrf_token %}
-            <input type="password" name="cur_password" placeholder="Current Password" /><br />
+            {% if form %}
+            {{ form.as_p }}
+            {% else %}
+
+            <input type="password" name="current_password" placeholder="Current Password" /><br />
             <input type="password" name="new_password1" placeholder="New Password" /><br />
-            <input type="password" name="new_password2" placeholder="Retype New Password" />
+            <input type="password" name="new_password2" placeholder="Confirm New Password" />
+            {% endif %}
         </div>
         <div class="modal-footer">
             <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</a>
