--- a/templates/group_comment.html
+++ b/templates/group_comment.html
@@ -1,5 +1,5 @@
 {% load gravatar %}
-<li class="media comment">
+<li class="media comment post-{{ post.pk }}">
     <div class='avatar-container pull-left media-object'>
         <img style="display: inline;"{# TODO remove #}
              class="avatar pull-left media-object"
