pulled some hair out of my head and got things working also added monkey.patch_all to manage.py

--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -36,11 +36,11 @@ $(document).ready(function() {
      * throws retrieved data on top of current content
      * most of the code involves parsing the xml
      */
-    (function update() {
+    /*(function update() {
         $.ajax({url: "update/", success: function(data) {
         	alert("hi");
         }, dataType: "html", complete: update, timeout: 40000});
-    })();
+    })();*/
 });
 </script>
 {% endblock extrajs %}
