--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -33,14 +33,19 @@ $(document).ready(function() {
     /* Automatically makes an ajax call to 'update/' view
      * times out after 40s
      * after timeout or sucess, recursively calls itself again
-     * throws retrieved data on top of current content
-     * most of the code involves parsing the xml
      */
-    /*(function update() {
+    (function update() {
         $.ajax({url: "update/", success: function(data) {
-        	alert("hi");
+        	if ($(data).hasClass("comment")) {
+                // returned data is a comment
+                var postID = "#post-" + $(data).attr("post");
+                $(postID).find('.comments').append(data);
+            } else if ($(data).hasClass("post")) {
+                // returned data is a post
+                // TODO implement
+            }
         }, dataType: "html", complete: update, timeout: 40000});
-    })();*/
+    })();
 });
 </script>
 {% endblock extrajs %}
