--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -28,24 +28,6 @@
 {% block extrajs %}
 {{ block.super }}
 <script src="{{ STATIC_URL }}js/md5.js" type="text/javascript"></script>
-<script>
-$(document).ready(function() {
-    /* Automatically makes an ajax call to 'update/' view
-     * times out after 40s
-     * after timeout or sucess, recursively calls itself again
-     */
-    (function update() {
-        $.ajax({url: "update/", success: function(data) {
-        	if ($(data).hasClass("comment")) {
-                // returned data is a comment
-                var postID = "#post-" + $(data).attr("post");
-                $(postID).find('.comments').append(data);
-            } else if ($(data).hasClass("post")) {
-                // returned data is a post
-                // TODO implement
-            }
-        }, dataType: "html", complete: update, timeout: 40000});
-    })();
-});
-</script>
+<script src="{{ STATIC_URL }}js/jquery.timeago.min.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/group.js" type="text/javascript"></script>
 {% endblock extrajs %}
