fadein comment avatar

--- a/templates/group_comment.html
+++ b/templates/group_comment.html
@@ -1,8 +1,7 @@
 {% load gravatar %}
 <li class="media comment" post="{{ comment.post.pk }}">
     <div class='avatar-container pull-left media-object'>
-        <img style="display: inline;"{# TODO remove #}
-             class="avatar pull-left media-object"
+        <img class="avatar pull-left media-object"
              src="{{ comment.author.user.email|gravatar:'300' }}"
              alt="commenters's gravatar"
         />
