--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -8,6 +8,7 @@
 	<img class="pull-left" src="{{ user.email|gravatar:'60' }}" alt="user's gravatar" />
 	<textarea class="input-block-level pull-left" placeholder="Communicate with your group..." id="id_message" rows="10" cols="40" name="message"></textarea>
 	<input type="submit" value="Post" class="btn pull-right btn-primary" />
+	<img class="ajax-loader hide" src="{{ STATIC_URL }}images/ajax-loader.gif" alt="loading..." />
     {% csrf_token %}
 </form>
 
