Better warning when a group has no posts.
Close #47

--- a/templates/group_view.html
+++ b/templates/group_view.html
@@ -19,8 +19,8 @@
     {% endfor %}
 </ul>
 {% else %}
-<div class="alert alert-error">
-    No posts are available.
+<div class="alert alert-warning">
+    There are no posts in this group. Use the above form to create a post.
 </div>
 {% endif %}
 
