--- a/templates/group_comment.html
+++ b/templates/group_comment.html
@@ -1,20 +1,18 @@
 {% load gravatar %}
 <li class="media comment" post="{{ comment.post.pk }}">
-    <div class='avatar-container pull-left media-object'>
+    <!--<div class='avatar-container pull-left media-object'>
         <img class="avatar pull-left media-object"
              src="{{ comment.author.user.email|gravatar:'300' }}"
              alt="commenters's gravatar"
         />
-    </div>
+    </div>-->
     <div class="media-body">
         <span class="media-heading">
+            <em class="hide"><abbr class="timeago pull-right" title="{{ comment.time_stamp }}">{{ comment.date_posted }}</abbr></em>
             <abbr title="{{ comment.author.user.email }}">
-                <strong class="pull-left name">{{ comment.author.user.first_name }} {{ comment.author.user.last_name }}</strong>
+                <strong class="pull-left name">{{ comment.author.user.first_name }} {{ comment.author.user.last_name }}: </strong>
             </abbr>
-
-            <em class="pull-right"><abbr class="timeago" title="{{ comment.time_stamp }}">{{ comment.date_posted }}</abbr></em>
-            <br />
         </span>
-        <div class="comment-message">{{ comment.message }}</div>
+        <div class="comment-message">&nbsp{{ comment.message }}</div>
     </div>
 </li>
