--- a/templates/group_post.html
+++ b/templates/group_post.html
@@ -10,32 +10,32 @@
                 <strong class="pull-left name">{{ post.author.user.first_name }} {{ post.author.user.last_name }}</strong>
             </abbr>
 
-            <span class="pull-right">
-                <a href="javascript:void(0)" class="comment-unhide-btn">Comment</a>
-            </span>
+            
             <em class="pull-right"><abbr class="timeago" title="{{ post.time_stamp }}">{{ post.date_posted }}</abbr></em>
             <br />
         </span>
         <div class="post-message">{{ post.message }}</div>
         <ul class="media-list comments">
+            <div class='triangle'></div>
             {% if post.comment_set.all %}
             {% for comment in post.comment_set.all %}
                 {% include "group_comment.html" %}
             {% endfor %}
             {% endif %}
-        </ul>
-        <div class="comment-form-container loading-spinner-container well-small well clearfix hide">
-            <div class='avatar-container pull-left'>
-                <img class="avatar pull-left" src="{{ user.email|gravatar:'60' }}" alt="user's gravatar" />
+            <div class='discuss'><a href="javascript:void(0)" class="comment-unhide-btn">Comment</a></div>
+            <div class="comment-form-container loading-spinner-container clearfix hide">
+                <!--<div class='avatar-container pull-left'>
+                    <img class="avatar pull-left" src="{{ user.email|gravatar:'60' }}" alt="user's gravatar" />
+                </div>-->
+                <span class="pull-left name">{{ user.first_name }} {{ user.last_name }}:&nbsp</span>
+                <form method="post" class="comment-form">
+                    {% csrf_token %}
+                    <input type="text" placeholder="Comment on this post" id="id_message" name="comment" class="pull-left comment-box" autocomplete="off" />
+                    <input type="hidden" name="id_post" value="{{ post.pk }}" />
+                    <input type="submit" value="Comment" class="btn pull-left btn-primary" />
+                </form>
+                <div class="loading-spinner hide"></div>
             </div>
-            <strong class="pull-left name">{{ user.first_name }} {{ user.last_name }}</strong><br/>
-            <form method="post" class="comment-form clearfix">
-                {% csrf_token %}
-                <input type="text" placeholder="Comment on this post" id="id_message" name="comment" class="pull-left comment-box" autocomplete="off" />
-                <input type="hidden" name="id_post" value="{{ post.pk }}" />
-                <input type="submit" value="Comment" class="btn pull-left btn-primary" />
-            </form>
-            <div class="loading-spinner hide"></div>
-        </div>
+        </ul>
     </div>
 </li>
