--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -1,8 +1,19 @@
 /* Check and delete styles that conflict in custom.css*/
 
 body {
-	padding-top: 40px;
     background-color: #f5f5f5;
+}
+
+.navbar {
+	margin-bottom: 0px;
+}
+
+.navbar-inner {
+	background: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	border: none;
 }
 
 .placeholder {
@@ -66,9 +77,12 @@ abbr {
 	margin: 0;
 }
 
-#content-container > .hero-unit, #left-column {
+#content-container > .hero-unit {
     -moz-border-radius-topleft: 0;
     -webkit-border-top-left-radius: 0;
+}
+
+#left-column {
 	-moz-border-radius-topright: 0;
     -webkit-border-top-right-radius: 0;
 }
