--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -4,7 +4,7 @@
 {% load gravatar %}
 
 {% block body %}
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
     <div class="navbar-inner">
   	    <div class="container">
             <a class="brand" href="#">Bulletin</a>
