--- a/templates/group_base.html
+++ b/templates/group_base.html
@@ -57,7 +57,7 @@
 					{% endblock maincontent %}
 				</div>
 			</div>
-			<div id="footer" class='pull-right'></div>
+			<div id="footer" class='pull-right'>Whitespace</div>
 		</div>
 	</div>
 </div>
